# GNN_algorithms

./: GCNLayer.py  README.md  pyproject.toml  requirements.txt
model/GCN/: GATLayer.py  GCNLayer.py
tutorial/: a_simple_tutorial_for_gat.ipynb  a_simple_tutorial_for_gcn.ipynb  a_simple_tutorial_for_gnn.ipynb
